# ca-doughnut

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
backend/app/: crud.py  database.py  main.py  models.py  schemas.py  seed.py
data/: california.csv  raw_ecological.csv  raw_social.csv
docs/: design.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/api/: regions.json
frontend/public/api/regions/california/: doughnut.json
frontend/src/: App.tsx  app.css
frontend/src/api/: client.ts
frontend/src/components/: AdminTable.tsx  DetailPanel.tsx  DoughnutChart.tsx  DrillDown.tsx  Heatmap.tsx  Outreach.tsx
frontend/src/lib/: d3-doughnut.d.ts  d3-doughnut.js
frontend/src/types/: index.ts
scripts/: export_static.py  ingest.py  ingest_caldec.py
