[tool.poetry]
name = "doughnut-economics"
version = "0.1.0"
description = "Interactive Doughnut Economics visualization platform"
authors = []
readme = "README.md"
packages = [{include = "app", from = "backend"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.110.0"
uvicorn = {extras = ["standard"], version = ">=0.29.0"}
sqlalchemy = ">=2.0.0"
pydantic = ">=2.0.0"

[tool.poetry.scripts]
seed = "app.seed:seed"
ingest = "scripts.ingest:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
